Kosta/znk audio player (#180)
* on ended audio event handler

* audio ended event

* add show as done option

* dist

* without dist

--- a/demo/znkAudioPlayer/index.html
+++ b/demo/znkAudioPlayer/index.html
@@ -28,8 +28,8 @@
 <body ng-app="demo" ng-controller="Main">
 <dev class="znk-image-audio-wrapper">
     <znk-image-audio image="d.image"
-                     allow-replay="true"
                      audio="d.audio"
+                     on-ended="d.onAudioEnded()"
                      auto-play="false">
     </znk-image-audio>
 </dev>
