--- a/demo/exerciseDataGetters/index.html
+++ b/demo/exerciseDataGetters/index.html
@@ -69,6 +69,7 @@
     <script src="firebase/firebase.js"></script>
     <script src="angular-translate/angular-translate.js"></script>
     <script src="angular-translate-loader-partial/angular-translate-loader-partial.js"></script>
+    <script src="angular-svg-round-progressbar/build/roundProgress.min.js"></script>
     <!-- endbower -->
 
     <script src="main.js"></script>
