--- a/demo/auth/index.html
+++ b/demo/auth/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
-<body ng-app="demoApp">
+<body ng-app="demo" ng-controller="main">
 
 <style>
     body {
@@ -13,8 +13,18 @@
 </style>
 
 <script src="angular/angular.js"></script>
+<script src="firebase/firebase-debug.js"></script>
+<script src="angularfire/dist/angularfire.js"></script>
+
 <script src="auth/auth.js"></script>
+<script src="config/config.js"></script>
+
+
 <script src="demoApp.js"></script>
+<script src="storagesConfig.js"></script>
+
+<script src="storage/storage.js"></script>
+
 
 </body>
 </html>
