--- a/demo/auth/index.html
+++ b/demo/auth/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
-<body ng-app="demo" ng-controller="main">
+<body ng-app="demo">
 
 <style>
     body {
