--- a/demo/exerciseDataGetters/index.html
+++ b/demo/exerciseDataGetters/index.html
@@ -70,6 +70,7 @@
     <script src="angular-translate/angular-translate.js"></script>
     <script src="angular-translate-loader-partial/angular-translate-loader-partial.js"></script>
     <script src="angular-svg-round-progressbar/build/roundProgress.min.js"></script>
+    <script src="angular-ui-router/release/angular-ui-router.js"></script>
     <!-- endbower -->
 
     <script src="main.js"></script>
@@ -78,5 +79,6 @@
     <script src="storagesConfig.js"></script>
     <script src="contentConfig.js"></script>
     <script src="env.service.js"></script>
+    <script src="analyticsConfig.js"></script>
 </body>
 </html>
