--- a/demo/exerciseDataGetters/index.html
+++ b/demo/exerciseDataGetters/index.html
@@ -68,6 +68,8 @@
     <script src="Swiper/dist/js/swiper.js"></script>
     <script src="firebase/firebase.js"></script>
     <script src="angular-translate/angular-translate.js"></script>
+    <script src="SHA-1/sha1.js"></script>
+    <script src="angulartics/src/angulartics.js"></script>
     <script src="angular-translate-loader-partial/angular-translate-loader-partial.js"></script>
     <script src="angular-svg-round-progressbar/build/roundProgress.min.js"></script>
     <script src="angular-ui-router/release/angular-ui-router.js"></script>
