--- a/demo/exerciseDataGetters/index.html
+++ b/demo/exerciseDataGetters/index.html
@@ -68,8 +68,11 @@
     <script src="Swiper/dist/js/swiper.js"></script>
     <script src="firebase/firebase.js"></script>
     <script src="angular-translate/angular-translate.js"></script>
+    <script src="SHA-1/sha1.js"></script>
+    <script src="angulartics/src/angulartics.js"></script>
     <script src="angular-translate-loader-partial/angular-translate-loader-partial.js"></script>
     <script src="angular-svg-round-progressbar/build/roundProgress.min.js"></script>
+    <script src="angular-ui-router/release/angular-ui-router.js"></script>
     <!-- endbower -->
 
     <script src="main.js"></script>
@@ -78,5 +81,6 @@
     <script src="storagesConfig.js"></script>
     <script src="contentConfig.js"></script>
     <script src="env.service.js"></script>
+    <script src="analyticsConfig.js"></script>
 </body>
 </html>
