evaluator add uid

--- a/demo/evaluator/index.html
+++ b/demo/evaluator/index.html
@@ -16,6 +16,8 @@
 
     <script src="angular/angular.js"></script>
 
+    <script src="config/config.js"></script>
+
     <script src="evaluator/evaluator.js"></script>
 
     <script src="demoApp.js"></script>
