--- a/demo/screenSharing/index.html
+++ b/demo/screenSharing/index.html
@@ -4,10 +4,22 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <!-- bower:css -->
+    <link rel="stylesheet" href="Swiper/dist/css/swiper.css" />
     <!-- endbower -->
 </head>
-<body ng-app="demoApp">
+<body ng-app="demo">
     <!-- bower:js -->
+    <script src="angular/angular.js"></script>
+    <script src="angular-animate/angular-animate.js"></script>
+    <script src="Swiper/dist/js/swiper.js"></script>
+    <script src="firebase/firebase.js"></script>
+    <script src="ng-idle/angular-idle.js"></script>
     <!-- endbower -->
+    <script src="main.js "></script>
+
+    <script src="demoApp.js "></script>
+    <script src="autoLogin.js"></script>
+    <script src="env.service.js"></script>
+    <script src="storagesConfig.js"></script>
 </body>
 </html>
