--- a/demo/evaluator/index.html
+++ b/demo/evaluator/index.html
@@ -12,7 +12,9 @@
         }
     </style>
 
-    <button ng-click="evaluateQuestion()">click evaluateQuestion</button>
+    <button ng-click="shouldEvaluateQuestion()">click shouldEvaluateQuestion</button>
+
+    <button ng-click="getEvaluateStatus()">click getEvaluateStatus</button>
 
     <script src="angular/angular.js"></script>
 
