--- a/demo/evaluator/index.html
+++ b/demo/evaluator/index.html
@@ -14,6 +14,8 @@
 
     <button ng-click="shouldEvaluateQuestion()">click shouldEvaluateQuestion</button>
 
+    <button ng-click="isEvaluateQuestionType()">click isEvaluateQuestionType</button>
+
     <button ng-click="getEvaluateStatus()">click getEvaluateStatus</button>
 
     <script src="angular/angular.js"></script>
