skip audio option

--- a/demo/znkAudioPlayer/index.html
+++ b/demo/znkAudioPlayer/index.html
@@ -29,6 +29,7 @@
 <div class="znk-image-audio-wrapper">
     <znk-image-audio image="d.image"
                      audio="d.audio"
+                     show-skip-option="true"
                      on-ended="d.onAudioEnded()"
                      auto-play="false">
     </znk-image-audio>
@@ -58,6 +59,7 @@
 <script src="znkAudioPlayer/templates.js"></script>
 <script src="angular-translate/angular-translate.js"></script>
 <script src="angular-translate-loader-partial/angular-translate-loader-partial.js"></script>
+<script src="angular-animate/angular-animate.js"></script>
 
 <script src="demo.js"></script>
 </body>
