--- a/demo/screenSharingDemo/index.html
+++ b/demo/screenSharingDemo/index.html
@@ -14,6 +14,8 @@
     <button ng-click="activateSharing(3)">Sharer</button>
     <h1>End sharing</h1>
     <button ng-click="endSharing()">End sharing</button>
+    <h1>Show screen sharing confirmation pop up</h1>
+    <button ng-click="showScreenSharingConfirmationPopUp()">End sharing</button>
     <!-- bower:js -->
     <script src="angular/angular.js"></script>
     <script src="angular-animate/angular-animate.js"></script>
@@ -32,5 +34,6 @@
     <script src="demoApp.js "></script>
     <script src="env.service.js"></script>
     <script src="storagesConfig.js"></script>
+    <script src="translate.config.js"></script>
 </body>
 </html>
