--- a/demo/calls/index.html
+++ b/demo/calls/index.html
@@ -5,25 +5,35 @@
     <title>Title</title>
     <!-- bower:css -->
     <link rel="stylesheet" href="Swiper/dist/css/swiper.css" />
+    <link rel="stylesheet" href="angular-material/angular-material.css" />
     <!-- endbower -->
     <link rel="stylesheet" href="main.css">
 </head>
 <body ng-app="demo">
 
-<h2>Active Call Box</h2>
-<active-call></active-call>
+<div ng-controller="demoCtrl">
+    <h2>Active Call Box</h2>
+    <active-call></active-call>
 
-<hr>
+    <hr>
 
-<h2>Call Btn</h2>
-<h3>offline</h3>
-<call-btn ng-model="offline"></call-btn>
-<h3>call</h3>
-<call-btn ng-model="call"></call-btn>
-<h3>called</h3>
-<call-btn ng-model="called"></call-btn>
+    <h2>Call Pop-ups</h2>
 
-<hr>
+    <div><a href="" ng-click="openIncomingCallModal()">Incoming Call</a></div>
+    <div><a href="" ng-click="openOutgoingCallModal()">Outgoing Call</a></div>
+
+    <hr>
+
+    <h2>Call Btn</h2>
+    <h3>offline</h3>
+    <call-btn ng-model="offline"></call-btn>
+    <h3>call</h3>
+    <call-btn ng-model="call"></call-btn>
+    <h3>called</h3>
+    <call-btn ng-model="called"></call-btn>
+
+    <hr>
+</div>
 
 <!-- bower:js -->
 <script src="angular/angular.js"></script>
@@ -37,6 +47,9 @@
 <script src="angular-translate-loader-partial/angular-translate-loader-partial.js"></script>
 <script src="angular-svg-round-progressbar/build/roundProgress.min.js"></script>
 <script src="angular-ui-router/release/angular-ui-router.js"></script>
+<script src="angular-aria/angular-aria.js"></script>
+<script src="angular-messages/angular-messages.js"></script>
+<script src="angular-material/angular-material.js"></script>
 <!-- endbower -->
 
 <script src="main.js "></script>
