--- a/demo/screenSharingDemo/index.html
+++ b/demo/screenSharingDemo/index.html
@@ -5,6 +5,7 @@
     <title>Title</title>
     <!-- bower:css -->
     <link rel="stylesheet" href="Swiper/dist/css/swiper.css" />
+    <link rel="stylesheet" href="angular-material/angular-material.css" />
     <!-- endbower -->
     <link rel="stylesheet" href="main.css">
 </head>
@@ -28,6 +29,9 @@
     <script src="angular-translate-loader-partial/angular-translate-loader-partial.js"></script>
     <script src="angular-svg-round-progressbar/build/roundProgress.min.js"></script>
     <script src="angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="angular-aria/angular-aria.js"></script>
+    <script src="angular-messages/angular-messages.js"></script>
+    <script src="angular-material/angular-material.js"></script>
     <!-- endbower -->
     <script src="main.js "></script>
 
