--- a/demo/calls/index.html
+++ b/demo/calls/index.html
@@ -47,6 +47,7 @@
 <script src="angular-translate-loader-partial/angular-translate-loader-partial.js"></script>
 <script src="angular-svg-round-progressbar/build/roundProgress.min.js"></script>
 <script src="angular-ui-router/release/angular-ui-router.js"></script>
+<script src="plivo/dist/plivo.min.js"></script>
 <script src="angular-aria/angular-aria.js"></script>
 <script src="angular-messages/angular-messages.js"></script>
 <script src="angular-material/angular-material.js"></script>
@@ -57,5 +58,6 @@
 <script src="demoApp.js "></script>
 <script src="env.service.js"></script>
 <script src="storagesConfig.js"></script>
+<script src="translate.config.js"></script>
 </body>
 </html>
