add webcalls connect and disconnect to calls srv

--- a/demo/workouts/index.html
+++ b/demo/workouts/index.html
@@ -6,7 +6,6 @@
     <link rel="stylesheet" href="main.css">
     <!-- bower:css -->
     <link rel="stylesheet" href="Swiper/dist/css/swiper.css" />
-    <link rel="stylesheet" href="angular-material/angular-material.css" />
     <!-- endbower -->
 </head>
 <body ng-app="demo" ng-controller="Main">
@@ -75,9 +74,7 @@
     <script src="angular-translate-loader-partial/angular-translate-loader-partial.js"></script>
     <script src="angular-svg-round-progressbar/build/roundProgress.min.js"></script>
     <script src="angular-ui-router/release/angular-ui-router.js"></script>
-    <script src="angular-aria/angular-aria.js"></script>
-    <script src="angular-messages/angular-messages.js"></script>
-    <script src="angular-material/angular-material.js"></script>
+    <script src="plivo/dist/plivo.min.js"></script>
     <!-- endbower -->
 
     <script src="main.js"></script>
