- working on call events

--- a/demo/calls/index.html
+++ b/demo/calls/index.html
@@ -27,9 +27,9 @@
     <h2>Call Btn</h2>
     <h3>offline</h3>
     <call-btn ng-model="offline"></call-btn>
-    <h3>call</h3>
+    <h3>oded</h3>
     <call-btn ng-model="call"></call-btn>
-    <h3>called</h3>
+    <h3>ran</h3>
     <call-btn ng-model="called"></call-btn>
 
     <hr>
