--- a/demo/calls/index.html
+++ b/demo/calls/index.html
@@ -5,6 +5,7 @@
     <title>Title</title>
     <!-- bower:css -->
     <link rel="stylesheet" href="Swiper/dist/css/swiper.css" />
+    <link rel="stylesheet" href="angular-material/angular-material.css" />
     <!-- endbower -->
     <link rel="stylesheet" href="main.css">
 </head>
