- working on adding an error modal to callling feature

--- a/demo/calls/index.html
+++ b/demo/calls/index.html
@@ -19,8 +19,9 @@
 
     <h2>Call Pop-ups</h2>
 
-    <div><a href="" ng-click="openIncomingCallModal()">Incoming Call</a></div>
-    <div><a href="" ng-click="openOutgoingCallModal()">Outgoing Call</a></div>
+    <div><a href="" ng-click="openIncomingCallModal()">Open Incoming Call Modal</a></div>
+    <div><a href="" ng-click="openOutgoingCallModal()">Open Outgoing Call Modal</a></div>
+    <div><a href="" ng-click="openErrorModal()">Open Error Modal</a></div>
 
     <hr>
 
