- error modal - DONE

--- a/demo/calls/index.html
+++ b/demo/calls/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="angular-material/angular-material.css" />
     <!-- endbower -->
     <link rel="stylesheet" href="main.css">
+    <style>
+        body {
+            margin: 8px;
+        }
+    </style>
 </head>
 <body ng-app="demo">
 
