- callee name in activeCallDrv now shows real name - duration is not counted when call starts - added parameter to formatDuration filter to show >10 values as two digits

--- a/demo/calls/index.html
+++ b/demo/calls/index.html
@@ -18,7 +18,7 @@
 
 <div ng-controller="demoCtrl">
     <h2>Active Call Box</h2>
-    <active-call></active-call>
+    <active-call callee-name="{{calleeName}}"></active-call>
 
     <hr>
 
