--- a/demo/znkExercise/index.html
+++ b/demo/znkExercise/index.html
@@ -31,7 +31,12 @@
 </style>
 <body ng-app="demo" ng-controller="Main as $ctrl">
     <div class="btn-container">
-        <button ng-click="$ctrl.showExercise = !$ctrl.showExercise">Rebuild Exercise</button>
+        <button ng-click="$ctrl.rebuildExercise()">Rebuild Exercise</button>
+    </div>
+    <div class="btn-container">
+        <input type="text"
+               ng-model="$ctrl.newAnswer">
+        <button ng-click="$ctrl.updateCurrentAnswer($ctrl.newAnswer)">update answer</button>
     </div>
     <div ng-if="$ctrl.showExercise">
         <znk-exercise ng-model="results"
