- renamed activeCall DRV to activePanel DRV, to separate from calling feature - moved activePanel DRV outside of calls feature - activePanel DRV now receives hide and show events according to call status

--- a/demo/calls/index.html
+++ b/demo/calls/index.html
@@ -18,7 +18,11 @@
 
 <div ng-controller="demoCtrl">
     <h2>Active Call Box</h2>
-    <active-call callee-name="{{calleeName}}"></active-call>
+
+    <active-panel
+        actions="actions"
+        callee-name="{{calleeName}}">
+    </active-panel>
 
     <hr>
 
