--- a/demo/calls/index.html
+++ b/demo/calls/index.html
@@ -21,7 +21,7 @@
 
     <active-panel
         actions="actions"
-        callBtnModel="callBtnModel"
+        call-btn-model="callBtnModel"
         callee-name="{{calleeName}}">
     </active-panel>
 
