--- a/demo/calls/index.html
+++ b/demo/calls/index.html
@@ -19,11 +19,11 @@
 <div ng-controller="demoCtrl">
     <h2>Active Call Box</h2>
 
-    <active-panel
-        actions="actions"
+    <!--<active-panel>-->
+        <!--actions="actions"-->
         <!--call-btn-model="callBtnModel"-->
-        callee-name="{{calleeName}}">
-    </active-panel>
+        <!--callee-name="{{calleeName}}"-->
+    <!--</active-panel>-->
 
     <hr>
 
