--- a/demo/workouts/index.html
+++ b/demo/workouts/index.html
@@ -67,6 +67,7 @@
     <script src="angular/angular.js"></script>
     <script src="angular-animate/angular-animate.js"></script>
     <script src="angular-aria/angular-aria.js"></script>
+    <script src="angular-sanitize/angular-sanitize.js"></script>
     <script src="Swiper/dist/js/swiper.js"></script>
     <script src="firebase/firebase.js"></script>
     <script src="ng-idle/angular-idle.js"></script>
