--- a/demo/znkChat/index.html
+++ b/demo/znkChat/index.html
@@ -3,34 +3,42 @@
 <head>
     <meta charset="UTF-8">
 
-    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="main.css"/>
 </head>
 <style>
-    body{
+    body {
         background: #f2f2f2;
-    }
-
-    znk-exercise{
-        height: 600px;
-        width: 1000px;
-        margin: 100px 100px 0 auto;
-        display: inline-block;
-        float: right;
-    }
-
-    question-builder{
-        overflow: auto;
-        height: 100%;
-        background: white;
     }
 
 </style>
 <body ng-app="demo" ng-controller="ctrl">
+
+<!-- bower:js -->
 <script src="angular/angular.js"></script>
-<script src="znkChat/znkChat.js"></script>
+<script src="angular-animate/angular-animate.js"></script>
+<script src="angular-aria/angular-aria.js"></script>
+<script src="angular-sanitize/angular-sanitize.js"></script>
+<script src="Swiper/dist/js/swiper.js"></script>
+<script src="firebase/firebase.js"></script>
+<script src="ng-idle/angular-idle.js"></script>
+<script src="SHA-1/sha1.js"></script>
+<script src="angulartics/src/angulartics.js"></script>
+<script src="angular-translate/angular-translate.js"></script>
+<script src="angular-translate-loader-partial/angular-translate-loader-partial.js"></script>
+<script src="angular-svg-round-progressbar/build/roundProgress.min.js"></script>
+<script src="plivo/dist/plivo.min.js"></script>
+<script src="angular-messages/angular-messages.js"></script>
+<script src="angular-material/angular-material.js"></script>
+<script src="angular-ui-router/release/angular-ui-router.js"></script>
+<!-- endbower -->
+<script src="main.js "></script>
 
 
-    <znk-chat></znk-chat>
-    <script src="demo.js"></script>
+<znk-chat></znk-chat>
+<script src="demo.js"></script>
+<script src="env.service.js"></script>
+<script src="config/config.js"></script>
+<script src="storagesConfig.js"></script>
+
 </body>
 </html>
