--- a/demo/znkChat/index.html
+++ b/demo/znkChat/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <!-- bower:css -->
+    <link rel="stylesheet" href="Swiper/dist/css/swiper.css" />
     <link rel="stylesheet" href="angular-material/angular-material.css" />
     <!-- endbower -->
     <link rel="stylesheet" href="main.css"/>
