--- a/demo/znkChat/index.html
+++ b/demo/znkChat/index.html
@@ -41,7 +41,7 @@
 <script src="main.js "></script>
 
 <div class="chat-wrapper">
-    <znk-chat></znk-chat>
+    <znk-chat user-chat-obj="userChatObj"></znk-chat>
 </div>
 
 <script src="demo.js"></script>
