--- a/demo/znkChat/index.html
+++ b/demo/znkChat/index.html
@@ -38,6 +38,8 @@
 <!-- endbower -->
 <script src="svgIcon/svgIcon.js"></script>
 <script src="presence/presence.js"></script>
+<script src="user/user.js"></script>
+<script src="auth/auth.js"></script>
 <script src="main.js "></script>
 
 <div class="chat-wrapper">
