--- a/demo/znkChat/index.html
+++ b/demo/znkChat/index.html
@@ -40,6 +40,7 @@
 <script src="presence/presence.js"></script>
 <script src="user/user.js"></script>
 <script src="auth/auth.js"></script>
+<script src="utility/utility.js"></script>
 <script src="main.js "></script>
 
 <div class="chat-wrapper">
