--- a/demo/znkChat/index.html
+++ b/demo/znkChat/index.html
@@ -41,6 +41,7 @@
 <script src="user/user.js"></script>
 <script src="auth/auth.js"></script>
 <script src="utility/utility.js"></script>
+<script src="teachers/teachers.js"></script>
 <script src="main.js "></script>
 
 <div class="chat-wrapper">
