--- a/demo/znkChat/index.html
+++ b/demo/znkChat/index.html
@@ -16,7 +16,7 @@
 }
 
 </style>
-<body ng-app="demo" ng-controller="ctrl">
+<body ng-app="demo" style="background-color: #dee2e6" ng-controller="ctrl">
 
 <!-- bower:js -->
 <script src="angular/angular.js"></script>
