--- a/demo/znkChat/index.html
+++ b/demo/znkChat/index.html
@@ -16,7 +16,7 @@
 }
 
 </style>
-<body ng-app="demo" style="background-color: #dee2e6" ng-controller="ctrl">
+<body ng-app="demo" style="background-color: #3f51b2;" ng-controller="ctrl">
 
 <!-- bower:js -->
 <script src="angular/angular.js"></script>
@@ -45,7 +45,7 @@
 <script src="main.js "></script>
 
 <div class="chat-wrapper">
-    <znk-chat user-chat-obj="userChatObj"></znk-chat>
+    <znk-chat local-user="localUser"></znk-chat>
 </div>
 
 <script src="demo.js"></script>
