--- a/demo/znkChat/index.html
+++ b/demo/znkChat/index.html
@@ -42,6 +42,7 @@
 <script src="auth/auth.js"></script>
 <script src="utility/utility.js"></script>
 <script src="teachers/teachers.js"></script>
+<script src="auth/auth.js"></script>
 <script src="main.js "></script>
 
 <div class="chat-wrapper">
@@ -49,7 +50,6 @@
 </div>
 
 <script src="demo.js"></script>
-<script src="env.service.js"></script>
 <script src="config/config.js"></script>
 <script src="storagesConfig.js"></script>
 
