--- a/demo/znkChat/index.html
+++ b/demo/znkChat/index.html
@@ -36,22 +36,19 @@
 <script src="angular-material/angular-material.js"></script>
 <script src="angular-ui-router/release/angular-ui-router.js"></script>
 <!-- endbower -->
-<script src="svgIcon/svgIcon.js"></script>
-<script src="presence/presence.js"></script>
-<script src="user/user.js"></script>
-<script src="auth/auth.js"></script>
-<script src="utility/utility.js"></script>
-<script src="teachers/teachers.js"></script>
-<script src="auth/auth.js"></script>
+
+
 <script src="main.js "></script>
+<script src="config/config.js"></script>
+<script src="demo.js"></script>
+<script src="storagesConfig.js"></script>
+<script src="env.service.js"></script>
+
 
 <div class="chat-wrapper">
     <znk-chat local-user="localUser"></znk-chat>
 </div>
 
-<script src="demo.js"></script>
-<script src="config/config.js"></script>
-<script src="storagesConfig.js"></script>
 
 </body>
 </html>
