--- a/demo/znkQuestionReport/index.html
+++ b/demo/znkQuestionReport/index.html
@@ -12,7 +12,7 @@
 
 </head>
 <body ng-app="demo" layout="column"  ng-controller="Main as vm">
-<znk-question-report report-data="vm.questionData"></znk-question-report>
+<znk-question-report report-data="vm.questionData" style="margin: 5em;"></znk-question-report>
 
 <!-- Bower:js -->
 <script src="angular/angular.js"></script>
@@ -31,7 +31,6 @@
 <script src="angular-messages/angular-messages.js"></script>
 <script src="angular-material/angular-material.js"></script>
 <script src="angular-ui-router/release/angular-ui-router.js"></script>
-<script src="angular-bootstrap/ui-bootstrap-tpls.js"></script>
 <!-- endBower -->
 
 <script src="main.js"></script>
