--- a/demo/znkQuestionReport/index.html
+++ b/demo/znkQuestionReport/index.html
@@ -39,6 +39,7 @@
 <script src="analyticsConfig.js"></script>
 <script src="translate.config.js"></script>
 <script src="storagesConfig.js"></script>
+<script src="env.service.js"></script>
 <script src="../auth/auth.js"></script>
 </body>
 </html>
