pull request fixes

--- a/demo/znkQuestionReport/index.html
+++ b/demo/znkQuestionReport/index.html
@@ -10,9 +10,15 @@
 
     <link rel="stylesheet" href="main.css">
 
+    <style>
+        znk-question-report {
+            margin: 5em;
+        }
+    </style>
+
 </head>
 <body ng-app="demo" layout="column"  ng-controller="Main as vm">
-<znk-question-report report-data="vm.questionData" style="margin: 5em;"></znk-question-report>
+<znk-question-report report-data="vm.questionData"></znk-question-report>
 
 <!-- Bower:js -->
 <script src="angular/angular.js"></script>
