TFL-1275/   Once "Report Question" popup is open, user should not be able to answer question using keyboard

--- a/demo/znkQuestionReport/index.html
+++ b/demo/znkQuestionReport/index.html
@@ -12,7 +12,9 @@
 
     <style>
         znk-question-report {
-            margin: 5em;
+            position: absolute;
+            top: 60px;
+            right: 60px;
         }
     </style>
 
