--- a/demo/znkAudioPlayer/index.html
+++ b/demo/znkAudioPlayer/index.html
@@ -54,6 +54,7 @@
 
 <script src="angular/angular.js"></script>
 
+<script src="znkMedia/znkMedia.js"></script>
 <script src="svgIcon/svgIcon.js"></script>
 <script src="znkAudioPlayer/znkAudioPlayer.js"></script>
 <script src="znkAudioPlayer/templates.js"></script>
