--- a/demo/znkChat/index.html
+++ b/demo/znkChat/index.html
@@ -30,14 +30,14 @@
 <script src="angulartics/src/angulartics.js"></script>
 <script src="angular-translate/angular-translate.js"></script>
 <script src="angular-translate-loader-partial/angular-translate-loader-partial.js"></script>
-<script src="angular-svg-round-progressbar/build/roundProgress.min.js"></script>
 <script src="plivo/dist/plivo.min.js"></script>
 <script src="angular-messages/angular-messages.js"></script>
 <script src="angular-material/angular-material.js"></script>
 <script src="angular-ui-router/release/angular-ui-router.js"></script>
+<script src="angular-svg-round-progressbar/build/roundProgress.js"></script>
 <!-- endbower -->
 
-
+<script src="znkMedia/znkMedia.js"></script>
 <script src="main.js "></script>
 <script src="config/config.js"></script>
 <script src="demo.js"></script>
@@ -49,6 +49,6 @@
     <znk-chat local-user="localUser"></znk-chat>
 </div>
 
-
+<audio src="znkChat/assets/sounds/sound.mp3">
 </body>
 </html>
