--- a/demo/teachers/index.html
+++ b/demo/teachers/index.html
@@ -28,11 +28,11 @@
     <script src="angulartics/src/angulartics.js"></script>
     <script src="angular-translate/angular-translate.js"></script>
     <script src="angular-translate-loader-partial/angular-translate-loader-partial.js"></script>
-    <script src="angular-svg-round-progressbar/build/roundProgress.min.js"></script>
     <script src="plivo/dist/plivo.min.js"></script>
     <script src="angular-messages/angular-messages.js"></script>
     <script src="angular-material/angular-material.js"></script>
     <script src="angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="angular-svg-round-progressbar/build/roundProgress.js"></script>
     <!-- endbower -->
     <script src="main.js "></script>
     {{ctrl.teachers}}
