--- a/demo/znkExercise/index.html
+++ b/demo/znkExercise/index.html
@@ -64,11 +64,11 @@
     <script src="angulartics/src/angulartics.js"></script>
     <script src="angular-translate/angular-translate.js"></script>
     <script src="angular-translate-loader-partial/angular-translate-loader-partial.js"></script>
-    <script src="angular-svg-round-progressbar/build/roundProgress.min.js"></script>
     <script src="plivo/dist/plivo.min.js"></script>
     <script src="angular-messages/angular-messages.js"></script>
     <script src="angular-material/angular-material.js"></script>
     <script src="angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="angular-svg-round-progressbar/build/roundProgress.js"></script>
     <!-- endbower -->
 
     <script src="main.js"></script>
@@ -76,7 +76,7 @@
 
     <script src="storagesConfig.js"></script>
     <script src="contentConfig.js"></script>
-    <script src="translate.config.js"></script>
+    <!--<script src="translate.config.js"></script>-->
     <script src="env.service.js"></script>
     <script src="infraSrvUserDataConfig.js"></script>
     <script src="analyticsConfig.js"></script>
