change translation + dist

--- a/demo/calls/index.html
+++ b/demo/calls/index.html
@@ -61,10 +61,12 @@
 <script src="angular-svg-round-progressbar/build/roundProgress.js"></script>
 <!-- endbower -->
 
-<script src="main.js "></script>
+<script src="main.js"></script>
 
 <script src="demoApp.js "></script>
+
 <script src="storagesConfig.js"></script>
+<script src="env.service.js"></script>
 <script src="translate.config.js"></script>
 </body>
 </html>
