--- a/demo/auth/index.html
+++ b/demo/auth/index.html
@@ -14,7 +14,7 @@
 
 <script src="angular/angular.js"></script>
 <script src="firebase/firebase-debug.js"></script>
-
+<script src="angular-translate/angular-translate.js"></script>
 <script src="auth/auth.js"></script>
 <script src="config/config.js"></script>
 
