change translation + dist

--- a/demo/eventManagerDemo/index.html
+++ b/demo/eventManagerDemo/index.html
@@ -51,5 +51,7 @@
 <script src="main.js"></script>
 <script src="demo.js"></script>
 
+<script src="translate.config.js"></script>
+
 </body>
 </html>
