--- a/demo/znkExercise/index.html
+++ b/demo/znkExercise/index.html
@@ -74,6 +74,7 @@
     <script src="main.js"></script>
     <script src="demo.js"></script>
 
+    <script src="translate.config.js"></script>
     <script src="storagesConfig.js"></script>
     <script src="contentConfig.js"></script>
     <script src="env.service.js"></script>
