--- a/demo/znkProgressBar/index.html
+++ b/demo/znkProgressBar/index.html
@@ -8,6 +8,7 @@
     <script src="angular/angular.js"></script>
     <script src="angular-translate/angular-translate.js"></script>
     <script src="angular-translate-loader-partial/angular-translate-loader-partial.js"></script>
+    <script src="translate.config.js"></script>
 
     <script src="svgIcon/svgIcon.js"></script>
     <script src="znkProgressBar/znkProgressBar.js"></script>
