--- a/demo/znkTimeline/index.html
+++ b/demo/znkTimeline/index.html
@@ -42,5 +42,7 @@
     <script src="main.js"></script>
 
     <script src="demoApp.js"></script>
+
+    <script src="translate.config.js"></script>
 </body>
 </html>
