--- a/demo/activePanel/index.html
+++ b/demo/activePanel/index.html
@@ -44,6 +44,7 @@
 
 <script src="demoApp.js"></script>
 
+<script src="translate.config.js"></script>
 <script src="env.service.js"></script>
 <script src="storagesConfig.js"></script>
 
