--- a/demo/content/index.html
+++ b/demo/content/index.html
@@ -30,6 +30,7 @@
     <script src="main.js"></script>
 
     <script src="demoApp.js"></script>
+    <script src="translate.config.js"></script>
     <script src="storagesConfig.js"></script>
     <script src="contentConfig.js"></script>
     <script src="env.service.js"></script>
