--- a/demo/screenSharing/index.html
+++ b/demo/screenSharing/index.html
@@ -38,6 +38,7 @@
     <script src="main.js "></script>
 
     <script src="demoApp.js "></script>
+    <script src="translate.config.js"></script>
     <script src="env.service.js"></script>
     <script src="storagesConfig.js"></script>
 </body>
