--- a/demo/teachers/index.html
+++ b/demo/teachers/index.html
@@ -44,6 +44,7 @@
         </div>
     </div>
     <script src="demo.js"></script>
+    <script src="translate.config.js"></script>
     <script src="env.service.js"></script>
     <script src="config/config.js"></script>
     <script src="storagesConfig.js"></script>
