--- a/demo/timer/index.html
+++ b/demo/timer/index.html
@@ -28,6 +28,7 @@
 <script src="angular-translate/angular-translate.js"></script>
 <script src="angular-translate-loader-partial/angular-translate-loader-partial.js"></script>
 
+<script src="translate.config.js"></script>
 <script src="general/general.js"></script>
 <script src="enum/enum.js"></script>
 <script src="svgIcon/svgIcon.js"></script>
