--- a/demo/workouts/index.html
+++ b/demo/workouts/index.html
@@ -84,6 +84,7 @@
 
     <script src="main.js"></script>
 
+    <script src="translate.config.js"></script>
     <script src="demoApp.js"></script>
     <script src="storagesConfig.js"></script>
     <script src="contentConfig.js"></script>
