--- a/demo/znkAudioPlayer/index.html
+++ b/demo/znkAudioPlayer/index.html
@@ -62,5 +62,6 @@
 <script src="angular-animate/angular-animate.js"></script>
 
 <script src="demo.js"></script>
+<script src="translate.config.js"></script>
 </body>
 </html>
