--- a/demo/znkLesson/index.html
+++ b/demo/znkLesson/index.html
@@ -22,6 +22,8 @@
 <h2>znkLesson</h2>
 <znk-lesson></znk-lesson>
 
+<!--<button ng-click="vm.showActiveLessonModal()">Show Active Lesson Modal</button>-->
+
 <!-- Bower:js -->
 <script src="angular/angular.js"></script>
 <script src="angular-animate/angular-animate.js"></script>
