--- a/demo/znkSession/index.html
+++ b/demo/znkSession/index.html
@@ -15,6 +15,11 @@
             width: 100%;
             text-align: center;
         }
+        active-panel{
+            position: absolute;
+            top: 20px;
+            right: 40px;
+        }
     </style>
 
 </head>
