--- a/demo/znkSession/index.html
+++ b/demo/znkSession/index.html
@@ -28,7 +28,7 @@
     <!--<hr>-->
 
     <!--<h3>Offline</h3>-->
-    <znk-session ng-model="offline"></znk-session>
+    <znk-session></znk-session>
     <!--<h3>Live Session Available</h3>-->
     <!--<znk-session ng-model="available"></znk-session>-->
     <!--<h3>Live Session Ended</h3>-->
