aria label is missing fix + dist

--- a/demo/znkQuestionReport/index.html
+++ b/demo/znkQuestionReport/index.html
@@ -11,6 +11,9 @@
     <link rel="stylesheet" href="main.css">
 
     <style>
+        body {
+            background-color: #000000;
+        }
         znk-question-report {
             position: absolute;
             top: 60px;
