--- a/demo/znkExercise/index.html
+++ b/demo/znkExercise/index.html
@@ -81,6 +81,7 @@
     <script src="infraSrvUserDataConfig.js"></script>
     <script src="analyticsConfig.js"></script>
     <script src="znkExerciseConfig.js"></script>
+    <script src="znkSessionDataConfig.js"></script>
 
 
 </body>
