popupSrv icons fix

--- a/demo/popUp/index.html
+++ b/demo/popUp/index.html
@@ -21,10 +21,10 @@
     <script src="svgIcon/svgIcon.js"></script>
     <script src="autofocus/autofocus.js"></script>
     <script src="popUp/popUp.js"></script>
-    <script src="popUp/templates.js"></script>
     <script src="demoApp.js"></script>
 </head>
 <body ng-app="demoApp" ng-controller="Main">
+    <button ng-click="showPopup('info')">info pop</button>
     <button ng-click="showPopup('warning')">confirmation pop</button>
     <button ng-click="showPopup('error')">Error pop</button>
     <button ng-click="showPopup('error conformation')">Error conformation pop</button>
