--- a/demo/znkCategoryStats/index.html
+++ b/demo/znkCategoryStats/index.html
@@ -26,7 +26,7 @@
 </style>
 <body ng-app="demo" layout="column"  ng-controller="Main as vm">
 
-<znk-category-stats category-id="vm.categoryId" subject-id="vm.subjectId"></znk-category-stats>
+<znk-category-stats category-id="vm.categoryId"></znk-category-stats>
 
 
     <!-- bower:js -->
