--- a/demo/znkCategoryStats/index.html
+++ b/demo/znkCategoryStats/index.html
@@ -57,5 +57,6 @@
     <script src="storagesConfig.js"></script>
     <script src="env.service.js"></script>
     <script src="../auth/auth.js"></script>
+    <script src="categories.mock.js"></script>
 </body>
 </html>
