add categoriesConfig.js to demoShared folder

--- a/demo/znkCategoryStats/index.html
+++ b/demo/znkCategoryStats/index.html
@@ -56,7 +56,7 @@
     <script src="analyticsConfig.js"></script>
     <script src="storagesConfig.js"></script>
     <script src="env.service.js"></script>
+    <script src="categoriesConfig.js"></script>
     <script src="../auth/auth.js"></script>
-    <script src="categories.mock.js"></script>
 </body>
 </html>
