fixed scroll in pager

--- a/demo/scroll/index.html
+++ b/demo/scroll/index.html
@@ -37,8 +37,8 @@
     <button ng-click="lastAnim = lastAnim ? 0 : -100;scrollActions.animate(lastAnim,1000,'cubic-bezier(1, 0.04, 0.58, 1)')">Animate</button>
     <script src="angular/angular.js"></script>
 
-    <script src="components/scroll/module.js"></script>
-    <script src="components/scroll/znkScrollDrv.js"></script>
+    
+    <script src="scroll/scroll.js"></script>
 
     <script src="demoApp.js"></script>
 </body>
