--- a/demo/webcall/index.html
+++ b/demo/webcall/index.html
@@ -12,7 +12,7 @@
 <body ng-app="demoApp" ng-controller="Main">
     <button ng-click="init()">Init</button>
     <button ng-click="login()">Login</button>
-    <button ng-click="connect()">Call</button>
+    <button ng-click="call(1234)">Call</button>
     <button ng-click="hang()">Hang</button>
     
 </body>
