--- a/demo/webcall/index.html
+++ b/demo/webcall/index.html
@@ -10,7 +10,10 @@
     <script src="demoApp.js"></script>
 </head>
 <body ng-app="demoApp" ng-controller="Main">
-    <button ng-click="connect()">Connect</button>
+    <button ng-click="init()">Init</button>
+    <br>
+    <button ng-click="login()">Login</button>
+    <button ng-click="call(1234)">Call</button>
     <button ng-click="hang()">Hang</button>
     
 </body>
