--- a/demo/webcall/index.html
+++ b/demo/webcall/index.html
@@ -2,9 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="popUp/main.css">
     <title>Title</title>
     
     <script src="angular/angular.js"></script>
+     <script src="enum/enum.js"></script>
+    <script src="svgIcon/svgIcon.js"></script>
+    <script src="autofocus/autofocus.js"></script>
+    <script src="popUp/popUp.js"></script>
     <script src="webcall/webcall.js"></script>
     <script src="plivo/dist/plivo.min.js"></script>
     <script src="demoApp.js"></script>
@@ -15,6 +20,7 @@
     <button ng-click="login()">Login</button>
     <button ng-click="call(1234)">Call</button>
     <button ng-click="hang()">Hang</button>
+     <button ng-click="showPopup('error')">Error pop</button>
     
 </body>
 </html>
